project08/terraform/1-envoy-gateway/manifests/20-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: gw-envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo:1.0.0
          args:
            - "-text=envoy-gateway-ok"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: gw-envoy
spec:
  selector:
    app: echo
  ports:
    - name: http
      port: 80
      targetPort: 5678
